--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,273 @@
+/* @import 'https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap'; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    /* Red */
+    --color-brand-50: #fef2f2;
+    --color-brand-100: #fee2e2;
+    --color-brand-200: #fecaca;
+    --color-brand-300: #fca5a5;
+    --color-brand-500: #ef4444;
+    --color-brand-600: #dc2626;
+    --color-brand-700: #b91c1c;
+    --color-brand-800: #991b1b;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    /* Blue */
+    --color-blue-100: #dbeafe;
+    --color-blue-200: #bfdbfe;
+    --color-blue-300: #93c5fd;
+    --color-blue-400: #60a5fa;
+    --color-blue-500: #3b82f6;
+    --color-blue-600: #2563eb;
+    --color-blue-700: #1d4ed8;
+    --color-blue-800: #1e40af;
+    --color-blue-900: #1e3a8a;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    /* Grey */
+    --color-grey-0: #fff;
+    --color-grey-50: #f9fafb;
+    --color-grey-100: #f3f4f6;
+    --color-grey-200: #e5e7eb;
+    --color-grey-300: #d1d5db;
+    --color-grey-400: #9ca3af;
+    --color-grey-500: #6b7280;
+    --color-grey-600: #4b5563;
+    --color-grey-700: #374151;
+    --color-grey-800: #1f2937;
+    --color-grey-900: #111827;
+
+    --color-blue-100: #e0f2fe;
+    --color-blue-700: #0369a1;
+    --color-green-100: #dcfce7;
+    --color-green-700: #15803d;
+    --color-yellow-100: #fef9c3;
+    --color-yellow-700: #a16207;
+    --color-silver-100: #e5e7eb;
+    --color-silver-700: #374151;
+    --color-indigo-100: #e0e7ff;
+    --color-indigo-700: #4338ca;
+
+    --backdrop-color: rgba(255, 255, 255, 0.1);
+
+    --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.04);
+    --shadow-md: 0px 0.6rem 2.4rem rgba(0, 0, 0, 0.2);
+    --shadow-lg: 0 2.4rem 3.2rem rgba(0, 0, 0, 0.3);
+
+    --border-radius-tiny: 3px;
+    --border-radius-sm: 5px;
+    --border-radius-md: 7px;
+    --border-radius-lg: 9px;
+    --transition: all 300ms ease;
+
+    --container-width-forms: 40%;
+    --container-width-small: 60%;
+    --container-width-lg: 70%;
+    --container-width-md: 95%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: inherit;
+    text-decoration: none;
+    list-style: none;
 }
-a:hover {
-  color: #535bf2;
+
+html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+@media screen and (max-width: 450px) {
+    html {
+        font-size: 55%;
+    }
+}
+@media screen and (max-width: 700px) {
+    html {
+        font-size: 60%;
+    }
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    font-family: 'Poppins', sans-serif;
+    color: var(--color-grey-700);
+
+    min-height: 100vh;
+    line-height: 1.5;
+    font-size: 1.6rem;
+    /* background-color: var(--color-grey-100); */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+label {
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: 0.8rem 1.2rem;
+    font-family: inherit;
+    font-size: 1.6rem;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--color-light--3);
+    transition: all 0.2s;
+}
+
+input:focus {
+    outline: none;
+    background-color: #fff;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    cursor: pointer;
+    background: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    overflow-wrap: break-word;
+    hyphens: auto;
 }
+
+img {
+    width: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.container {
+    width: var(--container-width-small);
+    max-width: 1920px;
+    margin-inline: auto;
+}
+
+.cta:link,
+.cta:visited {
+    display: inline-block;
+    background-color: var(--color-brand-500);
+    color: var(--color-grey-50);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 400;
+    padding: 0.7rem 1.5rem;
+    /* border-radius: 5px; */
+    transition: var(--transition);
+}
+.cta:hover {
+    transform: translateY(-2px);
+}
+.cta:active {
+    transform: translateY(0);
+}
+
+/* Testimonial */
+
+.main {
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: center; */
+    /* height: 100vh; */
+    margin-top: 10%;
+    margin-bottom: 10rem;
+}
+
+.mySwiper {
+    width: 80%;
+}
+
+.swiper-slide {
+    width: 200px;
+    background-color: transparent;
+    border-radius: 10px;
+    background-size: cover;
+    /* border: 1px solid white; */
+    text-align: center;
+    /* font-family: 'Courier New', Courier, monospace; */
+    /* background-image: url(./assets/slideBG.png); */
+    color: #ffffff;
+}
+
+.swiper-slide p {
+    color: var(--color-grey-800);
+    width: 40%;
+    margin: auto;
+}
+.testimonials-profile-circle {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+.testimonial-avatar {
+    width: 100px;
+    height: 100px;
+    border: 3px solid var(--color-brand-500);
+    border-radius: 50%;
+}
+.review-by {
+    color: var(--color-blue-900);
+    font-size: 18px;
+    margin-bottom: 5rem;
+}
+.head {
+    color: var(--color-grey-800);
+    text-align: center;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: 700;
+}
+.head-p {
+    color: black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1em;
+    font-weight: 500;
+    /* font-family: 'Courier New', Courier, monospace; */
+}
+.swiper-pagination-bullet-active {
+    background-color: var(--color-brand-500) !important;
+    border: 2px solid #1d8ba0 !important;
+    /* padding: 1px !important; */
+    border-radius: 1px !important;
+    /* padding-left: 5px !important; */
+    width: 30px !important;
+    height: 1px !important;
+    /* padding-right: 5px !important; */
+}
+.swiper-pagination-bullet {
+    background-color: var(--color-brand-500) !important;
+    border: 2px solid var(--color-brand-500) !important;
+    border-radius: 1px !important;
+    width: 30px !important;
+    height: 1px !important;
+    margin-top: 4rem;
+}
+
+/* swiper-pagination {
+    margin-top: 4rem
+} */
+
+/* .swiper-wrapper {
+    :global(.swiper-wrapper) {
+        display: flex;
+        justify-content: center !important;
+    }
+} */
