--- a/src/pages/home/HubSpotForm.module.css
+++ b/src/pages/home/HubSpotForm.module.css
@@ -1,8 +1,9 @@
-.newsletter {
-    /* width: var(--container-width-forms); */
+.hubspot {
+    width: var(--container-width-forms);
     margin-inline: auto;
 
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    margin-top: 14rem;
 }
