--- a/src/pages/services/ServiceHead.module.css
+++ b/src/pages/services/ServiceHead.module.css
@@ -1,12 +1,13 @@
 .servicePage {
-    height: calc(80vh - 5rem);
+    height: calc(90vh);
     margin: 2.5rem;
     background-size: cover;
     background-position: center;
     padding: 2.5rem 5rem;
     transition: background-image 4s ease;
-    width: var(--container-width-lg);
+
     margin: auto;
+    margin-top: 6rem;
 }
 
 .section {
