--- a/src/ui/PageNav.module.css
+++ b/src/ui/PageNav.module.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     display: flex;
     align-items: center;
-    width: var(--container-width-lg);
+    width: var(--container-width-md);
     margin-inline: auto;
 
     /* padding-inline: 5rem; */
