--- a/src/pages/home/Footer.module.css
+++ b/src/pages/home/Footer.module.css
@@ -2,7 +2,7 @@ footer {
     background: var(--color-grey-700);
     padding-inline: 3rem;
     margin: auto;
-
+    margin-top: 5rem;
     padding-block: 2rem;
 }
 .footer {
