--- a/src/component/Partner.module.css
+++ b/src/component/Partner.module.css
@@ -1,5 +1,5 @@
 .swiper img {
-    width: 40%;
+    width: 60%;
     display: flex;
     align-self: center;
 }
@@ -8,11 +8,15 @@
     padding: 20rem;
 }
 
+:global(.swiper-wrapper) {
+    align-items: center;
+}
+
 .swiper {
     width: var(--container-width-lg);
     margin: auto;
     cursor: grabbing;
-    width: 70%;
+
     margin: 5rem;
 }
 
@@ -28,13 +32,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.partnerText h1 {
-    font-size: 2.5rem;
-    font-weight: 500;
-
-    text-transform: uppercase;
 }
 
 .partnerText p {
