--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,7 @@ img {
 
 .swiper-slide {
     width: 200px;
-    background-color: transparent;
+    background-color: red;
     border-radius: 10px;
     background-size: cover;
     /* border: 1px solid white; */
