--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ html {
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: var(--color-grey-700);
 
     min-height: 100vh;
@@ -187,7 +187,7 @@ img {
 
 .swiper-slide {
     width: 200px;
-    background-color: red;
+    background-color: transparent;
     border-radius: 10px;
     background-size: cover;
     /* border: 1px solid white; */
