--- a/src/ui/PageNav.module.css
+++ b/src/ui/PageNav.module.css
@@ -88,7 +88,7 @@
 }
 
 :global(.activeNav::after) {
-    content: '';
+    content: "";
     display: block;
     width: 2.5rem;
     height: 2.5rem;
