--- a/src/ui/PageNav.module.css
+++ b/src/ui/PageNav.module.css
@@ -53,6 +53,14 @@
     display: none;
 }
 
+.linkArrow {
+    display: flex;
+    align-items: center;
+}
+.linkArrow svg {
+    font-size: 2.5rem;
+}
+
 .serviceLink {
     position: relative;
     display: inline-block;
@@ -80,6 +88,9 @@
     padding: 5px 0;
     width: 100%;
     font-size: 1.2rem;
+}
+.dropdown ul li:hover {
+    color: var(--color-brand-500);
 }
 
 :global(.activeNav) {
