--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -77,93 +77,51 @@
 }
 
 .card {
-    width: var(--container-width-lg);
-    margin-block: 14rem;
+    width: var(--container-width-small);
+    margin-block: 10rem;
     margin-inline: auto;
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    background: var(--color-grey-200);
+    gap: 1rem;
+    text-align: center;
     padding-block: 9rem;
+}
+
+.card span {
+    font-weight: 700;
 }
 .card p {
     width: 90%;
+    font-size: 1.5rem;
 }
 
 .card h1 {
     font-size: 2rem;
+    text-align: center;
     color: var(--color-brand-500);
     font-weight: 700;
 }
 
-.card img {
-    width: 80%;
-    margin-inline: auto;
-}
-
-.threeD {
+.darkBg {
     width: var(--container-width-lg);
+    background: var(--color-grey-700);
     margin: auto;
-}
-.threeD h1 {
-    text-align: center;
-    font-size: 2.5rem;
-    color: var(--color-brand-500);
-    font-weight: 600;
-}
 
-.threeDHead p {
-    width: 60%;
+    gap: 1.5rem;
+    color: var(--color-grey-100);
+    padding: 3rem;
+    font-size: 1.5rem;
 }
-.threeD p {
-    text-align: center;
-
-    margin: auto;
-    margin-bottom: 3rem;
-}
-
-.dCards {
-    width: var(--container-width-lg);
-    margin: auto;
-    display: flex;
-    gap: 2rem;
-    flex-direction: column;
-    margin-bottom: 7rem;
-}
-
-.dCards .dCard:nth-child(1) {
-    margin-left: 20%;
-}
-.dCards .dCard:nth-child(2) {
-    margin-right: 20%;
-}
-.dCards .dCard:nth-child(3) {
-    margin-left: 20%;
-}
-.dCards .dCard:nth-child(4) {
-    margin-right: 20%;
-}
-.dCards .dCard:nth-child(5) {
-    margin-left: 20%;
-}
-.dCards .dCard:nth-child(6) {
-    margin-right: 20%;
-}
-
-.dCard {
-    background: var(--color-grey-100);
-    padding: 0.5rem 1rem;
-    box-shadow: var(--shadow-md);
-    margin-top: 2rem;
-}
-.dCard h1 {
+.darkBg h1 {
     font-size: 2rem;
-    font-weight: 500;
     color: var(--color-brand-500);
 }
-.dCard p {
-    font-size: 1.4rem;
+.darkBg .left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
 }
 
 @media screen and (max-width: 700px) {
