--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -78,14 +78,15 @@
 
 .card {
     width: var(--container-width-small);
-    margin-block: 10rem;
+    /* margin-block: 10rem; */
+    margin-top: 15rem;
     margin-inline: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
     text-align: center;
-    padding-block: 9rem;
+    padding-block: 4rem;
 }
 
 .card span {
@@ -107,18 +108,25 @@
     width: var(--container-width-lg);
     background: var(--color-grey-700);
     margin: auto;
-
+    margin-top: 3rem;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
     color: var(--color-grey-100);
     padding: 3rem;
     font-size: 1.5rem;
+}
+.darkBg img {
+    width: 70%;
+    border-radius: 10%;
+    margin: auto;
 }
 .darkBg h1 {
     font-size: 2rem;
     color: var(--color-brand-500);
 }
 .darkBg .left {
-    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 1.3rem;
