--- a/src/component/Government.module.css
+++ b/src/component/Government.module.css
@@ -52,9 +52,16 @@
     width: var(--container-width-small);
     font-weight: 400;
     background: var(--color-grey-50);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 
     font-size: 1.4rem;
     border: 1.5px solid var(--color-brand-300);
+}
+.govLeft span {
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 .govLeft h1 {
     font-size: 2rem;
